# Django-based_Quotes_Website

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  backup-authors_and_quotes.sql  docker-compose.yml  env.env  passwords.example.env  pyproject.toml  requirements.txt  test_Mongo_connection.py
quotes_site/: manage.py
quotes_site/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
quotes_site/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_quote_author_alter_quote_tags.py  0004_alter_author_born_date.py
quotes_site/quotes/static/quotes/: style.css
quotes_site/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  tag_quotes.html
quotes_site/quotes/templatetags/: extract.py
quotes_site/quotes_site/: asgi.py  settings.py  urls.py  wsgi.py
quotes_site/users/: forms.py  urls.py  views.py
quotes_site/users/templates/users/: login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  register.html
quotes_site/utils/: migrate_from_mongo.py
