[tool.poetry]
name = "django-based-quotes-website"
version = "0.1.0"
description = ""
authors = ["pavlodubovyi <133531274+pavlodubovyi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.6"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.1"
asgiref = "3.8.1"
black = "24.4.2"
click = "8.1.7"
dnspython = "2.6.1"
mypy-extensions = "1.0.0"
packaging = "24.0"
pathspec = "0.12.1"
pillow = "10.3.0"
platformdirs = "4.2.2"
sqlparse = "0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
